--- a/styleTwitter.css
+++ b/styleTwitter.css
@@ -38,3 +38,58 @@ nav a:hover{
 .twitter-timeline{
 	margin-left: 250px;
 }
+
+.interaction{
+	position: absolute;
+	width: 656px;
+	height: 638px;
+	left: 30px;
+	top: 147px;
+
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.container{
+	position: absolute;
+	width: 656px;
+	height: 638px;
+	/* left: 30px;
+	top: 147px; */
+
+	background: #EFEFEF;
+	border: 3px solid #1DA1F2;
+	box-sizing: border-box;
+}
+
+.rectangle{
+	position: absolute;
+	width: 653px;
+	height: 79px;
+	top: -1px;
+	background: #1DA1F2;
+}
+
+.subtitle {
+	position: absolute;
+	width: 536px;
+	height: 47px;
+	left: 50px;
+	top: 20px;
+
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 36px;
+	line-height: 42px;
+
+	color: #FFFFFF;
+}
+
+article{
+	position: absolute;
+	width: 574px;
+	height: 533px;
+	left: 35px;
+	top: 90px;
+	background: #FFFFFF;
+}
