--- a/styleTwitter.css
+++ b/styleTwitter.css
@@ -113,7 +113,7 @@ form { max-width:420px; margin:50px auto; }
 .feedback-input:focus { border:2px solid #1269bb; }
 
 .contactTitle {
-	color:white;
+	color:black;
   	font-family: Helvetica, Arial, sans-serif;
 	padding: 13px;
 	margin-top: 20px;
