--- a/styleTwitter.css
+++ b/styleTwitter.css
@@ -226,3 +226,11 @@ textarea{
 		pointer-events: none;
 	}
 }
+
+#instrucc-cont{
+  padding: 10px 30px 10px 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
